--- a/.github/git_pr_release.erb
+++ b/.github/git_pr_release.erb
@@ -1,5 +1,6 @@
-<% pull_requests.each do |pr| -%>
-  <% unless pr.title.include?("(staging用)") || pr.title.include?("[staging]") -%>
-    - #<%= pr.number %> <%= pr.mention %>
-  <% end -%>
-<% end -%>
+Release <%= Time.now %>
+<% pull_requests.each do |pr| %>
+  <% unless pr.title.include?("(staging用)") || pr.title.include?("[staging]") %>
+  - #<%= pr.number %> <%= pr.mention %>
+  <% end %>
+<% end %>
