--- a/.github/git_pr_release.erb
+++ b/.github/git_pr_release.erb
@@ -1,4 +1,4 @@
-Release <%= Time.strftime("%Y-%m-%d %H:%M") %>
+Release <%= Time.now.strftime("%Y-%m-%d %H:%M") %>
 <% pull_requests.each do |pr| -%>
 <% unless pr.title.include?("(staging用)") || pr.title.include?("[staging]") -%>
 - #<%= pr.number %> <%= pr.mention %>
